--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172953">SugarTeX – readable LaTeX language extension and transcompiler to LaTeX</a>
                                 </span>
                             </td>
                         </tr>
@@ -274,7 +274,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=deng">deng</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 14:19:04 &nbsp;•&nbsp;
                                     72 comments &nbsp;•&nbsp;
-                                    205.0 points
+                                    206.0 points
                                 </span>
                             </td>
                         </tr>
@@ -314,7 +314,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=giffarage">giffarage</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 13:33:30 &nbsp;•&nbsp;
                                     123 comments &nbsp;•&nbsp;
-                                    195.0 points
+                                    196.0 points
                                 </span>
                             </td>
                         </tr>
@@ -454,7 +454,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 04:29:07 &nbsp;•&nbsp;
                                     78 comments &nbsp;•&nbsp;
-                                    168.0 points
+                                    169.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 04:00:03.118399</strong>
+            <strong>Last update at 2018-05-29 04:10:03.201815</strong>
         </div>
     </div>
 </div>
