--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172953">SugarTeX – readable LaTeX language extension and transcompiler to LaTeX</a>
                                 </span>
                             </td>
                         </tr>
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175960">NPM proxy users receiving ERR 418 I'm a teapot</a>
+                                    <a href="https://news.ycombinator.com/item?id=17160929">Document Liberation Project</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/npm/npm/issues/20791">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=spondyl">spondyl</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 02:10:43 &nbsp;•&nbsp;
-                                    63 comments &nbsp;•&nbsp;
-                                    88.0 points
+                                    <a class="node" href="https://www.documentliberation.org/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=based2">based2</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 08:43:19 &nbsp;•&nbsp;
+                                    18 comments &nbsp;•&nbsp;
+                                    90.0 points
                                 </span>
                             </td>
                         </tr>
@@ -333,7 +333,7 @@
                                     <a class="node" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 17:24:27 &nbsp;•&nbsp;
-                                    50 comments &nbsp;•&nbsp;
+                                    51 comments &nbsp;•&nbsp;
                                     78.0 points
                                 </span>
                             </td>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17171396">Intel accused of age discrimination</a>
+                                    <a href="https://news.ycombinator.com/item?id=17174696">Evidence of regulatory capture of patent examiners</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.theverge.com/2018/5/28/17401892/intel-age-discrimination-layoffs-investigation">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 09:03:10 &nbsp;•&nbsp;
-                                    61 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://papers.nber.org/papers/W24638">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Gimpei">Gimpei</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 20:38:01 &nbsp;•&nbsp;
+                                    16 comments &nbsp;•&nbsp;
                                     66.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 04:00:03.118399</strong>
+            <strong>Last update at 2018-05-29 04:10:03.201815</strong>
         </div>
     </div>
 </div>
