--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172953">SugarTeX – readable LaTeX language extension and transcompiler to LaTeX</a>
                                 </span>
                             </td>
                         </tr>
@@ -194,7 +194,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 17:37:51 &nbsp;•&nbsp;
                                     185 comments &nbsp;•&nbsp;
-                                    1229.0 points
+                                    1230.0 points
                                 </span>
                             </td>
                         </tr>
@@ -394,7 +394,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=brundolf">brundolf</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 13:50:56 &nbsp;•&nbsp;
                                     202 comments &nbsp;•&nbsp;
-                                    449.0 points
+                                    450.0 points
                                 </span>
                             </td>
                         </tr>
@@ -599,7 +599,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 04:00:03.118399</strong>
+            <strong>Last update at 2018-05-29 04:10:03.201815</strong>
         </div>
     </div>
 </div>
