--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172953">SugarTeX – readable LaTeX language extension and transcompiler to LaTeX</a>
                                 </span>
                             </td>
                         </tr>
@@ -254,7 +254,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=Mtz1974">Mtz1974</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 23:29:46 &nbsp;•&nbsp;
                                     91 comments &nbsp;•&nbsp;
-                                    382.0 points
+                                    383.0 points
                                 </span>
                             </td>
                         </tr>
@@ -313,8 +313,28 @@
                                     <a class="node" href="http://www.bbc.com/news/world-europe-44248448">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=vincvinc">vincvinc</a></strong> &nbsp;•&nbsp;
                                     2018-05-25 07:46:52 &nbsp;•&nbsp;
-                                    652 comments &nbsp;•&nbsp;
+                                    653 comments &nbsp;•&nbsp;
                                     360.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17173279">I put all my personal data on eBay</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://olifro.st/blog/data-on-ebay/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=olifrost">olifrost</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 16:30:26 &nbsp;•&nbsp;
+                                    93 comments &nbsp;•&nbsp;
+                                    358.0 points
                                 </span>
                             </td>
                         </tr>
@@ -335,26 +355,6 @@
                                     2018-05-26 13:41:54 &nbsp;•&nbsp;
                                     185 comments &nbsp;•&nbsp;
                                     357.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17173279">I put all my personal data on eBay</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://olifro.st/blog/data-on-ebay/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=olifrost">olifrost</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 16:30:26 &nbsp;•&nbsp;
-                                    93 comments &nbsp;•&nbsp;
-                                    355.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 04:00:03.118399</strong>
+            <strong>Last update at 2018-05-29 04:10:03.201815</strong>
         </div>
     </div>
 </div>
