--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -246,14 +246,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169262">A Slower Speed of Light (2012)</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172045">Teach Yourself Scheme in Fixnum Days</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://gamelab.mit.edu/games/a-slower-speed-of-light/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 21:44:53 &nbsp;•&nbsp;
-                                    15 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://ds26gte.github.io/tyscheme/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tempodox">tempodox</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 12:25:27 &nbsp;•&nbsp;
+                                    4 comments &nbsp;•&nbsp;
                                     86.0 points
                                 </span>
                             </td>
@@ -266,15 +266,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172045">Teach Yourself Scheme in Fixnum Days</a>
+                                    <a href="https://news.ycombinator.com/item?id=17169262">A Slower Speed of Light (2012)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://ds26gte.github.io/tyscheme/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tempodox">tempodox</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 12:25:27 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
-                                    85.0 points
+                                    <a class="node" href="http://gamelab.mit.edu/games/a-slower-speed-of-light/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 21:44:53 &nbsp;•&nbsp;
+                                    15 comments &nbsp;•&nbsp;
+                                    86.0 points
                                 </span>
                             </td>
                         </tr>
@@ -313,7 +313,7 @@
                                     <a class="node" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 17:24:27 &nbsp;•&nbsp;
-                                    54 comments &nbsp;•&nbsp;
+                                    57 comments &nbsp;•&nbsp;
                                     82.0 points
                                 </span>
                             </td>
@@ -406,15 +406,35 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17160253">Building a YouTube MP3 Downloader with Exodus, FFmpeg, and AWS Lambda</a>
+                                    <a href="https://news.ycombinator.com/item?id=17168487">Performance Impact of Removing an Out-of-Band Garbage Collector</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://intoli.com/blog/youtube-mp3-downloader/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=yarapavan">yarapavan</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 04:44:06 &nbsp;•&nbsp;
-                                    27 comments &nbsp;•&nbsp;
-                                    75.0 points
+                                    <a class="node" href="https://githubengineering.com/removing-oobgc/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jbredeche">jbredeche</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 18:58:07 &nbsp;•&nbsp;
+                                    37 comments &nbsp;•&nbsp;
+                                    74.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17174696">Evidence of regulatory capture of patent examiners</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://papers.nber.org/papers/W24638">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Gimpei">Gimpei</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 20:38:01 &nbsp;•&nbsp;
+                                    18 comments &nbsp;•&nbsp;
+                                    73.0 points
                                 </span>
                             </td>
                         </tr>
@@ -454,26 +474,6 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 22:48:37 &nbsp;•&nbsp;
                                     9 comments &nbsp;•&nbsp;
-                                    72.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17168487">Performance Impact of Removing an Out-of-Band Garbage Collector</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://githubengineering.com/removing-oobgc/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=jbredeche">jbredeche</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 18:58:07 &nbsp;•&nbsp;
-                                    37 comments &nbsp;•&nbsp;
                                     72.0 points
                                 </span>
                             </td>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174696">Evidence of regulatory capture of patent examiners</a>
+                                    <a href="https://news.ycombinator.com/item?id=17174697">Two Canadian banks say accounts compromised: CIBC 40,000 and BMO 50,000</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://papers.nber.org/papers/W24638">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Gimpei">Gimpei</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 20:38:01 &nbsp;•&nbsp;
-                                    16 comments &nbsp;•&nbsp;
-                                    70.0 points
+                                    <a class="node" href="http://www.cbc.ca/news/business/simplii-data-hack-1.4680575">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=t1o5">t1o5</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 20:38:07 &nbsp;•&nbsp;
+                                    54 comments &nbsp;•&nbsp;
+                                    66.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 04:40:03.218785</strong>
+            <strong>Last update at 2018-05-29 04:50:04.075303</strong>
         </div>
     </div>
 </div>
