--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -166,34 +166,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175872">Beyond Open Offices: The New Fog Creek Headquarters</a>
+                                    <a href="https://news.ycombinator.com/item?id=17176274">What It’s Like When Elon Musk’s Twitter Mob Comes After You</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://medium.com/make-better-software/beyond-open-offices-the-new-fog-creek-headquarters-bc2f70d7c7dc">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=phillco">phillco</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 01:48:21 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
-                                    8.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175350">PS4-5.05-Kernel-Exploit: A fully implemented kernel exploit for the PS4</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://github.com/Cryptogenic/PS4-5.05-Kernel-Exploit">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 23:06:24 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.thedailybeast.com/what-its-like-when-elon-musks-twitter-mob-comes-after-you">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=a_bonobo">a_bonobo</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 03:35:27 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
                                     8.0 points
                                 </span>
                             </td>
@@ -255,6 +235,26 @@
                                     2018-05-28 16:03:31 &nbsp;•&nbsp;
                                     1 comments &nbsp;•&nbsp;
                                     7.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17175848">AI better at finding skin cancer than doctors</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.yahoo.com/news/ai-better-finding-skin-cancer-doctors-study-230756918.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 01:43:09 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    6.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 05:30:03.318287</strong>
+            <strong>Last update at 2018-05-29 05:40:03.247172</strong>
         </div>
     </div>
 </div>
