--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175969">The Crisis No One Is Talking About</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175346">What we've learned about marketing on Reddit (with real data)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://globalnews.ca/news/4226936/boy-crisis-danielle-smith/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ardent_uno">ardent_uno</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 02:13:26 &nbsp;•&nbsp;
-                                    None comments &nbsp;•&nbsp;
-                                    15.0 points
+                                    <a class="node" href="https://www.indiehackers.com/@ceslami/500-signups-later-what-weve-learned-about-marketing-on-reddit-b2a31ea4c5">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ceslami">ceslami</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 23:04:49 &nbsp;•&nbsp;
+                                    4 comments &nbsp;•&nbsp;
+                                    16.0 points
                                 </span>
                             </td>
                         </tr>
@@ -186,14 +186,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175350">PS4-5.05-Kernel-Exploit: A fully implemented kernel exploit for the PS4</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175969">The Crisis No One Is Talking About</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/Cryptogenic/PS4-5.05-Kernel-Exploit">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 23:06:24 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://globalnews.ca/news/4226936/boy-crisis-danielle-smith/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ardent_uno">ardent_uno</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 02:13:26 &nbsp;•&nbsp;
+                                    None comments &nbsp;•&nbsp;
                                     15.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 05:50:03.744746</strong>
+            <strong>Last update at 2018-05-29 06:00:04.262382</strong>
         </div>
     </div>
 </div>
