--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -173,7 +173,7 @@
                                     <a class="node" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5110476/#">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=xo5vik">xo5vik</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 10:10:29 &nbsp;•&nbsp;
-                                    4 comments &nbsp;•&nbsp;
+                                    6 comments &nbsp;•&nbsp;
                                     39.0 points
                                 </span>
                             </td>
@@ -426,26 +426,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170827">Living Underwater with Jacques Cousteau</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.laphamsquarterly.org/roundtable/living-underwater-jacques-cousteau">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Thevet">Thevet</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 06:13:35 &nbsp;•&nbsp;
-                                    2 comments &nbsp;•&nbsp;
-                                    23.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17176050">Facebook charm offensive just turns into being offensive</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -514,7 +494,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 23:06:24 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
-                                    18.0 points
+                                    20.0 points
                                 </span>
                             </td>
                         </tr>
@@ -555,6 +535,26 @@
                                     2018-05-28 14:22:26 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     17.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17175346">What we've learned about marketing on Reddit (with real data)</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.indiehackers.com/@ceslami/500-signups-later-what-weve-learned-about-marketing-on-reddit-b2a31ea4c5">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ceslami">ceslami</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 23:04:49 &nbsp;•&nbsp;
+                                    4 comments &nbsp;•&nbsp;
+                                    16.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 06:10:04.204645</strong>
+            <strong>Last update at 2018-05-29 06:20:04.265846</strong>
         </div>
     </div>
 </div>
