--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -394,7 +394,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=brundolf">brundolf</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 13:50:56 &nbsp;•&nbsp;
                                     202 comments &nbsp;•&nbsp;
-                                    450.0 points
+                                    451.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17148192">Cool Backgrounds</a>
+                                    <a href="https://news.ycombinator.com/item?id=17173279">I put all my personal data on eBay</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://coolbackgrounds.io/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
-                                    2018-05-24 20:38:53 &nbsp;•&nbsp;
-                                    50 comments &nbsp;•&nbsp;
-                                    404.0 points
+                                    <a class="node" href="http://olifro.st/blog/data-on-ebay/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=olifrost">olifrost</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 16:30:26 &nbsp;•&nbsp;
+                                    102 comments &nbsp;•&nbsp;
+                                    407.0 points
                                 </span>
                             </td>
                         </tr>
@@ -599,7 +599,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 06:20:04.265846</strong>
+            <strong>Last update at 2018-05-29 06:30:03.722361</strong>
         </div>
     </div>
 </div>
