--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17173279">I put all my personal data on eBay</a>
+                                    <a href="https://news.ycombinator.com/item?id=17148192">Cool Backgrounds</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://olifro.st/blog/data-on-ebay/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=olifrost">olifrost</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 16:30:26 &nbsp;•&nbsp;
-                                    101 comments &nbsp;•&nbsp;
-                                    403.0 points
+                                    <a class="node" href="https://coolbackgrounds.io/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 20:38:53 &nbsp;•&nbsp;
+                                    50 comments &nbsp;•&nbsp;
+                                    404.0 points
                                 </span>
                             </td>
                         </tr>
@@ -194,7 +194,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=kqr2">kqr2</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 06:18:38 &nbsp;•&nbsp;
                                     71 comments &nbsp;•&nbsp;
-                                    401.0 points
+                                    402.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 06:20:04.265846</strong>
+            <strong>Last update at 2018-05-29 06:30:03.722361</strong>
         </div>
     </div>
 </div>
