--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -366,15 +366,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172613">Shadow DOM enabled in Firefox nightly</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172045">Teach Yourself Scheme in Fixnum Days</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://bugzilla.mozilla.org/1460069">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=velmu">velmu</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 14:32:46 &nbsp;•&nbsp;
-                                    51 comments &nbsp;•&nbsp;
-                                    108.0 points
+                                    <a class="node" href="https://ds26gte.github.io/tyscheme/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tempodox">tempodox</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 12:25:27 &nbsp;•&nbsp;
+                                    5 comments &nbsp;•&nbsp;
+                                    109.0 points
                                 </span>
                             </td>
                         </tr>
@@ -386,14 +386,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172045">Teach Yourself Scheme in Fixnum Days</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172613">Shadow DOM enabled in Firefox nightly</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://ds26gte.github.io/tyscheme/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tempodox">tempodox</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 12:25:27 &nbsp;•&nbsp;
-                                    5 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://bugzilla.mozilla.org/1460069">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=velmu">velmu</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 14:32:46 &nbsp;•&nbsp;
+                                    51 comments &nbsp;•&nbsp;
                                     108.0 points
                                 </span>
                             </td>
@@ -533,8 +533,8 @@
                                     <a class="node" href="http://www.cbc.ca/news/business/simplii-data-hack-1.4680575">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=t1o5">t1o5</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 20:38:07 &nbsp;•&nbsp;
-                                    63 comments &nbsp;•&nbsp;
-                                    90.0 points
+                                    65 comments &nbsp;•&nbsp;
+                                    93.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17162887">Mozilla to remove “meritocracy” from governance docs because it's “problematic”</a>
+                                    <a href="https://news.ycombinator.com/item?id=17174696">Evidence of regulatory capture of patent examiners</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://groups.google.com/d/msg/mozilla.governance/OQlS6-gUBLQ/u0Em5XKjCAAJ">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=cucumberferity">cucumberferity</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 16:34:20 &nbsp;•&nbsp;
-                                    141 comments &nbsp;•&nbsp;
-                                    90.0 points
+                                    <a class="node" href="http://papers.nber.org/papers/W24638">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Gimpei">Gimpei</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 20:38:01 &nbsp;•&nbsp;
+                                    20 comments &nbsp;•&nbsp;
+                                    91.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 06:40:04.639029</strong>
+            <strong>Last update at 2018-05-29 06:50:04.658719</strong>
         </div>
     </div>
 </div>
