--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -306,15 +306,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17171302">Farmee alpha released – a vertical farm control system for raspberry pi</a>
+                                    <a href="https://news.ycombinator.com/item?id=17177241">Microsoft .Net core telemetry violates GDPR</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://medium.com/farmee/farmee-closed-alpha-v0-2-released-c207ed981f0c">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=steffenabel">steffenabel</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 08:37:50 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    6.0 points
+                                    <a class="node" href="https://github.com/dotnet/cli/issues/3093#issuecomment-392663561">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=setquk">setquk</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 08:04:50 &nbsp;•&nbsp;
+                                    3 comments &nbsp;•&nbsp;
+                                    5.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 08:30:02.886200</strong>
+            <strong>Last update at 2018-05-29 08:40:03.860914</strong>
         </div>
     </div>
 </div>
