--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172287">Perceived Physical Activity and Mortality: Study</a>
+                                    <a href="https://news.ycombinator.com/item?id=17162971">The DisplayPort Pin 20 Problem</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.health.harvard.edu/blog/mind-over-matter-how-fit-you-think-you-are-versus-actual-fitness-2017081412282">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=giffarage">giffarage</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 13:33:30 &nbsp;•&nbsp;
-                                    130 comments &nbsp;•&nbsp;
-                                    216.0 points
+                                    <a class="node" href="http://monitorinsider.com/displayport/dp_pin20_controversy.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=PascLeRasc">PascLeRasc</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 16:49:54 &nbsp;•&nbsp;
+                                    66 comments &nbsp;•&nbsp;
+                                    217.0 points
                                 </span>
                             </td>
                         </tr>
@@ -213,7 +213,7 @@
                                     <a class="node" href="https://lists.gnu.org/archive/html/emacs-devel/2018-05/msg00765.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=deng">deng</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 14:19:04 &nbsp;•&nbsp;
-                                    78 comments &nbsp;•&nbsp;
+                                    79 comments &nbsp;•&nbsp;
                                     214.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 09:00:02.986571</strong>
+            <strong>Last update at 2018-05-29 09:10:03.013018</strong>
         </div>
     </div>
 </div>
