--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,14 +166,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175275">Fractal is a new messaging app for the Gnome desktop, powered by Matrix</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175969">The Crisis No One Is Talking About</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://medium.com/we-distribute/fractal-is-a-new-messaging-app-for-the-gnome-desktop-powered-by-matrix-a4f219cb1095">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=strypey">strypey</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 22:40:23 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://globalnews.ca/news/4226936/boy-crisis-danielle-smith/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ardent_uno">ardent_uno</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 02:13:26 &nbsp;•&nbsp;
+                                    None comments &nbsp;•&nbsp;
                                     15.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 09:30:03.042696</strong>
+            <strong>Last update at 2018-05-29 09:40:03.116268</strong>
         </div>
     </div>
 </div>
