--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -98,7 +98,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166326">Trackless - A GDPR-Friendly Google Analytics Opt-In Button</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172953">SugarTeX – readable LaTeX language extension and transcompiler to LaTeX</a>
                                 </span>
                             </td>
                         </tr>
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172953">SugarTeX – readable LaTeX language extension and transcompiler to LaTeX</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166326">Trackless - A GDPR-Friendly Google Analytics Opt-In Button</a>
                                 </span>
                             </td>
                         </tr>
@@ -414,7 +414,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=t1o5">t1o5</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 20:38:07 &nbsp;•&nbsp;
                                     74 comments &nbsp;•&nbsp;
-                                    106.0 points
+                                    109.0 points
                                 </span>
                             </td>
                         </tr>
@@ -513,7 +513,7 @@
                                     <a class="node" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 17:24:27 &nbsp;•&nbsp;
-                                    74 comments &nbsp;•&nbsp;
+                                    76 comments &nbsp;•&nbsp;
                                     101.0 points
                                 </span>
                             </td>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172305">Vuetube – Video resources that will help you to improve your Vue skills</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175421">Invisible asymptotes</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://vuetube.surge.sh">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=flowck">flowck</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 13:37:26 &nbsp;•&nbsp;
-                                    19 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://www.eugenewei.com/blog/2018/5/21/invisible-asymptotes">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lpolovets">lpolovets</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 23:34:29 &nbsp;•&nbsp;
+                                    13 comments &nbsp;•&nbsp;
                                     99.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 10:10:03.480519</strong>
+            <strong>Last update at 2018-05-29 10:20:03.194869</strong>
         </div>
     </div>
 </div>
