--- a/jobs/index.html
+++ b/jobs/index.html
@@ -98,7 +98,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172953">SugarTeX – readable LaTeX language extension and transcompiler to LaTeX</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175186">Sucrase, 20x faster smaller-scoped alternative to Babel</a>
                                 </span>
                             </td>
                         </tr>
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166326">Trackless - A GDPR-Friendly Google Analytics Opt-In Button</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172953">SugarTeX – readable LaTeX language extension and transcompiler to LaTeX</a>
                                 </span>
                             </td>
                         </tr>
@@ -577,7 +577,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 11:40:03.260308</strong>
+            <strong>Last update at 2018-05-29 11:50:03.292017</strong>
         </div>
     </div>
 </div>
