--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -98,7 +98,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172953">SugarTeX – readable LaTeX language extension and transcompiler to LaTeX</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175186">Sucrase, 20x faster smaller-scoped alternative to Babel</a>
                                 </span>
                             </td>
                         </tr>
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166326">Trackless - A GDPR-Friendly Google Analytics Opt-In Button</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172953">SugarTeX – readable LaTeX language extension and transcompiler to LaTeX</a>
                                 </span>
                             </td>
                         </tr>
@@ -193,7 +193,7 @@
                                     <a class="node" href="https://azeria-labs.com/the-importance-of-deep-work-the-30-hour-method-for-learning-a-new-skill/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 17:37:51 &nbsp;•&nbsp;
-                                    188 comments &nbsp;•&nbsp;
+                                    189 comments &nbsp;•&nbsp;
                                     1248.0 points
                                 </span>
                             </td>
@@ -294,7 +294,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=olifrost">olifrost</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 16:30:26 &nbsp;•&nbsp;
                                     120 comments &nbsp;•&nbsp;
-                                    489.0 points
+                                    490.0 points
                                 </span>
                             </td>
                         </tr>
@@ -599,7 +599,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 11:40:03.260308</strong>
+            <strong>Last update at 2018-05-29 11:50:03.292017</strong>
         </div>
     </div>
 </div>
