--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -206,14 +206,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17176895">Why It's So Hard to Learn Another Language After Childhood</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178365">WhoisGuard Privacy Protection is now free</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://time.com/5261446/language-critical-period-age/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=alberto_ol">alberto_ol</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 06:21:44 &nbsp;•&nbsp;
-                                    16 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.namecheap.com/security/whoisguard.aspx">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 12:12:10 &nbsp;•&nbsp;
+                                    6 comments &nbsp;•&nbsp;
                                     22.0 points
                                 </span>
                             </td>
@@ -366,14 +366,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178365">WhoisGuard Privacy Protection is now free</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175872">Beyond Open Offices: The New Fog Creek Headquarters</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.namecheap.com/security/whoisguard.aspx">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 12:12:10 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://medium.com/make-better-software/beyond-open-offices-the-new-fog-creek-headquarters-bc2f70d7c7dc">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=phillco">phillco</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 01:48:21 &nbsp;•&nbsp;
+                                    5 comments &nbsp;•&nbsp;
                                     14.0 points
                                 </span>
                             </td>
@@ -446,14 +446,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175872">Beyond Open Offices: The New Fog Creek Headquarters</a>
+                                    <a href="https://news.ycombinator.com/item?id=17177865">Challenges in Large FPGA-Based Logic Emulation Systems</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://medium.com/make-better-software/beyond-open-offices-the-new-fog-creek-headquarters-bc2f70d7c7dc">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=phillco">phillco</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 01:48:21 &nbsp;•&nbsp;
-                                    5 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://dl.acm.org/citation.cfm?id=3177542">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=godelmachine">godelmachine</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 10:18:31 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
                                     13.0 points
                                 </span>
                             </td>
@@ -546,13 +546,13 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177865">Challenges in Large FPGA-Based Logic Emulation Systems</a>
+                                    <a href="https://news.ycombinator.com/item?id=17176920">Clean code practices with JavaScript</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://dl.acm.org/citation.cfm?id=3177542">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=godelmachine">godelmachine</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 10:18:31 &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.atyantik.com/clean-code-practices-javascript/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tirthbodawala">tirthbodawala</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 06:31:06 &nbsp;•&nbsp;
                                     1 comments &nbsp;•&nbsp;
                                     12.0 points
                                 </span>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 12:30:03.295318</strong>
+            <strong>Last update at 2018-05-29 12:40:03.374754</strong>
         </div>
     </div>
 </div>
