--- a/jobs/index.html
+++ b/jobs/index.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172953">SugarTeX – readable LaTeX language extension and transcompiler to LaTeX</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178302">JQBX – Social Listening Web/Mobile App</a>
                                 </span>
                             </td>
                         </tr>
@@ -577,7 +577,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 13:30:03.499654</strong>
+            <strong>Last update at 2018-05-29 13:40:03.406874</strong>
         </div>
     </div>
 </div>
