--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172953">SugarTeX – readable LaTeX language extension and transcompiler to LaTeX</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178302">JQBX – Social Listening Web/Mobile App</a>
                                 </span>
                             </td>
                         </tr>
@@ -194,7 +194,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 17:37:51 &nbsp;•&nbsp;
                                     191 comments &nbsp;•&nbsp;
-                                    1250.0 points
+                                    1251.0 points
                                 </span>
                             </td>
                         </tr>
@@ -294,7 +294,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=olifrost">olifrost</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 16:30:26 &nbsp;•&nbsp;
                                     125 comments &nbsp;•&nbsp;
-                                    517.0 points
+                                    519.0 points
                                 </span>
                             </td>
                         </tr>
@@ -599,7 +599,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 13:30:03.499654</strong>
+            <strong>Last update at 2018-05-29 13:40:03.406874</strong>
         </div>
     </div>
 </div>
