--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172953">SugarTeX – readable LaTeX language extension and transcompiler to LaTeX</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178302">JQBX – Social Listening Web/Mobile App</a>
                                 </span>
                             </td>
                         </tr>
@@ -313,8 +313,8 @@
                                     <a class="node" href="https://www.health.harvard.edu/blog/mind-over-matter-how-fit-you-think-you-are-versus-actual-fitness-2017081412282">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=giffarage">giffarage</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 13:33:30 &nbsp;•&nbsp;
-                                    148 comments &nbsp;•&nbsp;
-                                    235.0 points
+                                    150 comments &nbsp;•&nbsp;
+                                    236.0 points
                                 </span>
                             </td>
                         </tr>
@@ -353,8 +353,8 @@
                                     <a class="node" href="https://github.com/npm/npm/issues/20791">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=spondyl">spondyl</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 02:10:43 &nbsp;•&nbsp;
-                                    185 comments &nbsp;•&nbsp;
-                                    230.0 points
+                                    188 comments &nbsp;•&nbsp;
+                                    232.0 points
                                 </span>
                             </td>
                         </tr>
@@ -553,7 +553,7 @@
                                     <a class="node" href="https://lists.gnu.org/archive/html/emacs-devel/2018-05/msg00765.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=deng">deng</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 14:19:04 &nbsp;•&nbsp;
-                                    86 comments &nbsp;•&nbsp;
+                                    87 comments &nbsp;•&nbsp;
                                     217.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 13:30:03.499654</strong>
+            <strong>Last update at 2018-05-29 13:40:03.406874</strong>
         </div>
     </div>
 </div>
